fix(FEC-8933): fix ads covered entire page (#101)
fix ads will cover only the player.

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,5 +1,5 @@
 .playkit-ads-cover {
-  position: fixed;
+  position: relative;
   cursor: pointer;
   width: 100%;
   height: 100%;
@@ -9,4 +9,6 @@
 .playkit-ads-container {
   visibility: hidden;
   position: absolute;
+  width: 100%;
+  height:100%;
 }
